--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,32 +1,22 @@
+/*UNIVERSAL*/
 *{
     margin: 0;
     padding: 0;
 }
 
-main{
+body{
     background-color: #fff;
     font-family: 'Source Sans Pro', sans-serif;
-    display: flex;
-    flex-direction: column;
+    width: 100%;
 }
 
-
 h1{
-    font-size: 3rem;
+    font-size: 3.125rem;
 }
 
 h2{
     font-size: 2rem;
-    font-weight: bold;
 }
-
-a {
-    transition: color .3s ease-in-out, box-shadow .3s ease-in-out;
-    text-decoration: none;
-    color: #fff;
-}   
-
-
 
 button{
     justify-content: center;
@@ -46,56 +36,188 @@ button:hover {
     color: #fff;
 }
 
-/*NAV*/
-nav{
-    position: fixed;
-    width: 100%;
-    height: 7rem;
-    z-index: 10;
-    background-color: #000;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+.fa-arrow-down{
+    font-size: 4rem;
+    justify-self: center;
 }
 
-nav a{
-    color: #fff;
-    font-weight: bold;
+
+.hover{
+    cursor: pointer;
+    transition: color .3s ease-in-out, box-shadow .3s ease-in-out;
     box-shadow: inset 0 0 0 0 #6d99db;
 }
 
-nav ul a:hover{
-  box-shadow: inset 100px 0 0 0 #6d99db;
-  color: white;
+.hover:hover{
+    box-shadow: inset 50rem 0 0 0 #6d99db;
+    color: white;
 }
 
-nav img{
-    margin: 1rem;
+/*CONTAINER*/
+.container{
+    display: flex;
+    flex-direction: column;
+    width: 40rem;
+    border-radius: 20px 20px 20px 20px;
 }
 
-nav li{
+.container-title{
+    border-radius: 20px 20px 0px 0px;
+    border: 0px;
+    text-align: center;
+    width: 100%;
+    color: #fff;
+    background-color: #000;  
+    transition: color .4s ease-in-out, box-shadow .4s ease-in-out;
+    
+}
+
+.container-body{
+    display: none;
+    padding: 2rem;
+    flex-direction: row;
+    flex-wrap: wrap;
+    
+    justify-content: space-around;
+}
+
+
+
+/*NAV*/
+
+nav{
+    position: fixed;
+    z-index: 10;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    height: 6rem;
+    background-color: #000;
+}
+
+nav a{
+    text-decoration: none;   
+    color: #fff;
+
+}
+
+nav li {
     display: inline-block;
-    margin: 1.5rem;
+    margin-right: 2rem;
 }
 
-article{
+/*INFO SECTION*/
+#info-section{
+    display: grid;
+    position: relative;
+    top: 6rem;
+    padding: 5rem;
+    align-items: center;
+    justify-items: center;
+    gap: 2rem;
+}
+
+.photo-container{
+    grid-area: photo;
+    background-color: #6d99db;
+    border-radius: 50px;
+    overflow: hidden;
+    justify-self: center;
+}
+
+.photo-container img{
+    display: block;
+    width: 100%;
+    height: auto;
+}
+
+#welcome{
+    grid-area: welcome;
+    
+}
+
+#david-name{
+    grid-area: name;
+    font-weight: bold;
+}
+
+
+#david-info{
+    grid-area: info;
+}
+
+.links{
+    grid-area: links;
+    display: flex;
+}
+
+.links li{
+    display: inline-block;
+    margin-right: 3.125rem;
+}
+
+.email{
+    grid-area: email;
+    color: #000;
+    text-decoration: none;
+}
+
+
+/*PRINCIPAL SECTION*/
+#principal-section{
+    display: flex;
+    flex-direction: row;
+    position: relative;
+    top: 6rem;
+    padding: 2rem 7rem;
+    justify-content: space-around;
+    gap: 2rem;
+}
+
+#left{
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+}
+
+/*CERTIFICATES*/
+.certificate-container{
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 1rem;
+    gap: 2rem;
+    width: 10rem;
+    height: 10rem;
 }
 
-span{
-    cursor: pointer;
-    transition: color .4s ease-in-out, box-shadow .4s ease-in-out;
+.certificate-container img{
+    width: 10rem;
+    height: 10rem;
+    display: block;
 }
 
-.certificate img{
-    width: 200px;
-    height: 200px;
+.certificate-name{
+
+    color: #000;
+    font-size: 1rem;
+    text-align: center;
+  
 }
 
-/*ICONS*/
+
+/*SKILLS*/
+.skill{
+
+    text-align: center;
+}
+
+.skill img{
+    width: 100px;
+    height: 100px;
+    margin: 0.5rem;
+}
+
 #mongo img{
     width: 66px;
     height: 100px;
@@ -116,160 +238,7 @@ span{
     height: 100px;
 }
 
-.skill img{
-    width: 100px;
-    height: 100px;
-    margin: 0.5rem;
-}
-
-.links{
-    display: flex;
-    gap: 3.125rem;
-    padding: 1.25rem 0rem;
-    justify-content: center;
-
-}
-
-/*CONTAINER*/
-.container{
-    display: flex;
-    align-items: center;
-    gap: 1rem;
-    flex-direction: column;
-    width: 100%;
-    border-radius: 20px 20px 20px 20px;
-    
-   
-}
-
-.container-title{
-    border-radius: 20px 20px 0px 0px;
-    border: 0px;
-    text-align: center;
-    width: 100%;
-    color: #fff;
-    background-color: #000;  
-    transition: color .4s ease-in-out, box-shadow .4s ease-in-out;
-    
-}
-
-.container-body{
-    gap: 2.5rem;
-}
-
-/*INFO SECTION*/
-#info-section{
-    display: grid;
-    position: relative;
-    top: 7rem;
-    padding: 2.5rem;
-    margin: 2rem;
-    gap: 1rem;
-   
-}
-
-#image-container{
-    grid-area: image;
-    background-color: #6d99db;
-    border-radius: 3.125rem;
-    width: 31.25rem; 
-    height: 28.75rem;
-    overflow: hidden;
-    display: flex;
-    align-items: center;
-    justify-content: center;
- 
-}
-
-#image-container img{
-    max-width: 100%;
-    height: auto;
-    display: block;
-}
-
-
-/*INTRODUCTION TEXT*/
-
-#introduction-text span{
-    color: #000;
-    box-shadow: inset 0 0 0 0 #6d99db;
-}
-
-#introduction-text span:hover{
-    box-shadow: inset 28.125rem 0 0 0 #6d99db;
-    color: #fff;
-}
-
-/*PRINCIPAL SECTION*/
-#principal-section{
-    position: relative;
-    display: grid;
-    grid-template-columns: repeat(2,1fr);
-    margin: 2rem;
-    gap: 1rem;
-    padding: 3rem;
-}
-
-/*GRIDS*/
-#left-grid, #right-grid{
-    display: flex;
-    flex-direction: column;
-    gap: 2.5rem;
-    justify-content: start;
-    align-items: flex-start;
-}
-
-/*CERTIFICATES*/
-
-#certificates{
-    grid-area: certificates;
-}
-
-#certificates-body{
-    display: none;
-    flex-direction: row;
-    text-align: center;
-
-}
-
-#button-certificates:hover, #button-skills:hover, #button-projects:hover{
-    cursor: pointer;
-    box-shadow: inset 45em 0 0 0 #6d99db;
-}
-
-/*SKILLS*/
-
-
-#skills{
-    grid-area: skills;
-
-}
-
-#skills-body{
-    display: none;
-    flex-direction: row;
-
-}
-
-
-
-
 /*PROJECTS*/
-#projects{
-    grid-area: projects;
-    background-color: #000;
-}
-
-#projects-body{
-    display: none;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-items: center;
-    justify-content: center;
-    gap: 1rem;
-   
-}
-
 .project-description{
     color: #fff;
     margin: 2rem;
@@ -277,78 +246,157 @@ span{
     background-color: rgba(0, 0, 0, 0.8);
 }
 
-
-.email{
-    margin-bottom: 2rem;
-    font-size: 2rem;
-    font-family: 'Source Sans Pro', sans-serif;
-    box-shadow: inset 0 0 0 0 #6d99db;
+.project{
+    text-align: center;
 }
 
-.email:hover{
-    box-shadow: inset 500px 0 0 0 #6d99db;
-    color: white;
+#projects-body{
+    background-color: #000;
 }
 
 /*MEDIA QUERIES*/
 
-
+/*COMPUTERS*/
 @media only screen and (min-width: 768px),(orientation: landscape) {
-    /* CSS ruleset */
+    /*INFO SECTION*/
     #info-section{
         grid-template-areas: 
-        "image welcome"
-        "image name"
-        "image infor"
-        "image contact";
-        grid-template-rows: repeat(4,8.5rem);
-        grid-template-columns: repeat(2,1fr);
+        "welcome photo"
+        "name photo"
+        "info photo"
+        "links photo"
+        "email photo";
+        grid-template-columns:  2fr 1fr;
+        grid-template-rows: 2rem 2rem 7rem 6rem 2rem;
     }
 
+    #welcome{     
+        justify-self: flex-start;
+    }
+
+    #david-name{
+        justify-self: flex-start;
+    }
+
+    .photo-container{
+        width: 30rem;
+        height: 30rem;
+    }
+
+    .email{
+        font-size: 2rem;
+    }
+
+    /*PRINCIPAL SECTION*/
     #principal-section{
-        grid-template-areas:
-            "certificates projects "
-            "skills projects ";
-        grid-template-rows: repeat(2,14rem);
-        grid-template-columns: repeat(2,1fr);
+        flex-direction: row;
+        justify-content: center;
+        gap: 2rem;
     }
 
-   
-
-
-
-    #introduction-text{
-        display: flex;
-        flex-direction: column;
-        padding-top: 1.6rem;
-        padding-bottom: 1.6rem;
-        gap: 2.5rem;
-    }
- 
+  
 }
 
+/*TABLET*/
 
-@media only screen and (max-width: 768px){
-    /* CSS ruleset */
+@media only screen and (max-width: 1024px){
+    /*INFO SECTION*/
     #info-section{
         grid-template-areas: 
-        "image"
-        "text"
-        "text"
-        "text";
+        "photo"
+        "photo"
+        "name"
+        "links"
+        "email";
+        grid-template-columns: 1fr;
+        grid-template-rows: repeat(2,10rem) 5rem 8rem 2rem;
+        gap: 0.5rem;
     }
 
-    .computer{
+    
+    #david-name{
+
+        justify-self: center;
+    }
+
+    #welcome{     
+        justify-self: center;
+    }
+
+    .photo-container{
+        width: 15.625rem;
+        height: 15.625rem;
+    }
+
+    .large{
         display: none;
     }
 
-    #introduction-text{
-        display: flex;
-        flex-direction: column;
-        padding-top: 1.6rem;
-        padding-bottom: 1.6rem;
-        gap: 2.5rem;
-        text-align: center;
+    
+    .email{
+        font-size: 1.75rem;
     }
 
+    /*PRINCIPAL SECTION*/
+    #principal-section{
+        flex-direction: column;
+        align-items: center;
+        justify-items: center;
+        gap: 2rem;
+    }
 }
+
+/*PHONE*/
+@media only screen and (max-width: 425px){
+    /*INFO SECTION*/
+    #info-section{
+        grid-template-areas: 
+        "photo"
+        "photo"
+        "name"
+        "links";
+       
+        grid-template-columns: 1fr;
+        grid-template-rows: repeat(2,10rem) 5rem 8rem;
+        gap: 0.5rem;
+    }
+
+
+    
+    #david-name{
+
+        justify-self: center;
+        font-size: 2rem;
+    }
+
+    #welcome{     
+        justify-self: center;
+    }
+
+    .photo-container{
+        width: 15.625rem;
+        height: 15.625rem;
+    }
+
+    .large{
+        display: none;
+    }
+
+    
+    .email{
+        display: none;
+    }
+
+    /*PRINCIPAL SECTION*/
+    #principal-section{
+        display: none;
+    }
+
+    
+    .links li{
+        display: inline-block;
+        margin-right: 0.05rem;
+        flex-wrap: wrap;
+    }
+}
+
